5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1888_1648.log
== TEST (2019-07-09 16:20:51) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovado, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[i]<=7):
		vetor[i]=i
		a=a+1
print(reprovado)
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:31) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovados, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[i]<=7):
		vetor[i]=i
		a=a+1
print(reprovado)
print(vetor)


-- EXECUTION TIME:
1.00093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    vetor=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:33) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovados, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[i]<=7):
		vetor[i]=i
		a=a+1
print(reprovado)
print(vetor)


-- EXECUTION TIME:
1.48121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    vetor=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:36) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovados, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[i]<=7):
		vetor[i]=i
		a=a+1
print(reprovado)
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:22:04) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovados, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[j]<=7):
		vetor[j]=i
		a=a+1
print(reprovado)
print(vetor)


-- EXECUTION TIME:
0.944663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    vetor=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:49) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovados, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[j]<=7):
		vetor[j]=j
		a=a+1
print(reprovado)
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:01) 
-- CODE:
from numpy import*

vet = array(eval(input('aprovados: ')))

for i in range(size(vet)):
	if(vet[i]<=7):
		reprovado=reprovado +1
		
vetor=zeros(reprovado, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[j]<=7):
		vetor[j]=j
		a=a+1
print(reprovado)
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:43) 
-- CODE:
from numpy import*

vet = array(eval(input('reprovado: ')))

for i in range(size(vet)):
	if(vet[i]<7):
		reprovado=reprovado +1
		
vetor=zeros(reprovado, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[j]<7):
		vetor[j]=j
		a=a+1
print(reprovado)
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:06) 
-- CODE:
from numpy import*

vetor = array(eval(input('reprovado: ')))

for i in range(size(vet)):
	if(vet[i]<7):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)
a=0
for i in range(size(vet)):
	if(vet[j]<7):
		vetor[j]=j
		a=a+1
print(reprovado)
print(vet)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:59) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vet)):
	if(vet[i]<7):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)
b=0
for i in range(size(vet)):
	if(vet[a]<7):
		a[b]=j
		a=a+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:18) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vet[i]<7):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)
b=0
for i in range(size(vet)):
	if(vet[a]<7):
		a[b]=j
		a=a+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:33) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vet[i]<7):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		a=a+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:49) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		a=a+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:01) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
vetor=zeros(reprovado, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:19) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:39) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
0.940353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:46) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
3.06147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:47) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
4.42704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:48) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
6.66408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:48) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
7.87451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:50) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
8.38945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:55) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
4.19884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:03) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.51408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:05) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.52757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:06) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.62158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:08) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.64814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:08) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.61881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:12) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.63659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:22) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
6.51514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:23) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.20495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:23) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.24419
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:

-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:25) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.30842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:25) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[b]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:26) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.76185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:27) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.86991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:32) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
5.24694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:32) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
3.49037
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1888/1648/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:33) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[a]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
4.35471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1648/main.py", line 9, in <module>
    a=zeros(reprovados, dtype=int)
NameError: name 'reprovados' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:33) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))

for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovados, dtype=int)
b=0
for i in range(size(b)):
	if(vet[b]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)


-- EXECUTION TIME:
3.01887
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1888/1648/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:15) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<7):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:49) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<=7):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<=7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:43) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<=7):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<=7):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:37) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<=70%):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<=70%):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
File "XXXX", line 6
    if(vetor[i]<=70%):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:46) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<=70):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<=70):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:36) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<=70):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<=70):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:02) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<70):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<70):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:19) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<70):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<70):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:49:28) 
-- CODE:
from numpy import*

vetor = array(eval(input('digite as notas: ')))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<70):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)
b=0
for j in range(size(vetor)):
	if(vetor[j]<70):
		a[b]=j
		b=b+1
		
print(reprovado)
print(a)
-- EXECUTION TIME:
1.10772
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
